2007-02-05 Borut Razem <borut.razem AT siol.net>

	* support/regression/fwk/lib/timeout.c: native WIN32 port,
	  implemented #1651830 Reg. tests: rewrite timeout.c to use WIN32 API

2007-02-03 Borut Razem <borut.razem AT siol.net>

	* src/SDCC.y, src/SDCCmain.c, src/SDCCglobl.h, doc/sdccman.lyx:
	  applied patch #1646602 option to set default signedness of char to
	  unsigned, added -funsigned-char command line option,
	  thanks to Gunther Jehle
	* device/lib/Makefile.in: added the -f option to rm so it doesn't
	  prompt for file deletion a few hundred times (especially the
	  subversion files, which have ro permissions so it asks for
	  confirmation), thanks to Simon McAuliffe;
	  added {} + option to find in order to remove multiple files from a
	  single rm commad

2007-02-02 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/SST89x5xRDx.h: Added.

2007-02-02 Raphael Neider <rneider AT web.de>

	* src/pic/glue.c (emitSymbolSet): check sym->etype before use
	* src/regression/Makefile: use --no-pcode-opt, ignore failing tests

2007-02-01 Raphael Neider <rneider AT web.de>

	* src/pic/glue.c (picglue,emitSymbolSet,showAllMemmaps): emit the
	  config words again

2007-01-31 Borut Razem <borut.razem AT siol.net>

	* support/Util/dbuf_string.h: added ATTRIBUTE_PRINTF to dbuf_printf()
	  if compiled with GCC. Thanks to Raphael Neider

2007-01-31 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (isValidIdChar,bankCompare): fuzzy matching of
	    operand names, handles name and (name + n) for all n,
	  (sameBank): restructured, also check bank allocation policy,
	* src/pic/glue.c (emitPseudoStack): fixed printf arguments,
	  (pic14_operandsAllocatedInSameBank): check whether to operands
	    will be allocated into the same bank (i.e., section) to reduce
	    BANKSEL overhead, queried from pcode.c:sameBank,
	  (pic14printLocals): reintroduced clustering registers into a single
	    section: all compiler generated symbols will now reside in one